--- a/Styles.css
+++ b/Styles.css
@@ -1,52 +1,57 @@
-﻿*{
+﻿* {
     margin: 0;
-    padding:0;
+    padding: 0;
     box-sizing: border-box;
- }
+}
+
 body {
     font-family: 'Raleway', sans-serif;
-   
     /*Background*/
     background: linear-gradient(90deg, #ACB6E5 0%, #86FDE8 100%);
     min-height: 100vh;
 }
 
-div{
-    border: 2px solid;
+div {
+    border: 0px solid;
     border-color: green;
 }
-.contenedor {
-    position: relative;
-    height: 600px;
-    display: flex;
-    align-items: center;
-    
-}
-.bannerUp{
-    width: 100%
+
+nav {
+    height: 200px;
 }
 
-.cloud {
-    position: absolute;
-    top: 0;
-    
+main {
     width: 100%;
 }
-.contenedor-textos{
-    width: 50%;
-    overflow: hidden;
-    color: #fff;
-}
-.contenedor-imagen {
-    position: relative;
-    width: 50%;
-}
-.titulo{
 
+.ctn_txt,
+.ctn_img {
+    width: 50%;
+    padding-left: 5%
+}
+
+.ctn_txt {
+    color: white;
+    padding-left:5%; 
+}
+
+.bannerUp {
+    display: flex;
+    width: 100%;
+}
+
+.bannerDown {
+    display: flex;
+    padding-left: 5%;
+}
+
+
+
+h1 {
     font-size: 50px;
 }
 
-.subtitulo{
+h2 {
     font-size: 30px;
     font-weight: 500;
     margin: 20px;
@@ -54,7 +59,69 @@ div{
 
 .boton {
     background-color: mediumpurple;
-    display: flex;
-    font-size: 16px;
+    margin-left: 40%;
+    border: none;
+    color: #fff;
+    padding: 1% 3%;
+    text-decoration: none;
+    font-size: 30px;
+    border-radius: 15px;
 }
 
+.header{
+    width:100%;
+    height: 70px;
+    display: block;
+    background-color: black;
+    border-radius: 4px;
+}
+
+.inner_header{
+    width: 1000px;
+    height: 100%;
+    display:block;
+    margin: 0 auto;
+   
+    border-radius: 8px;
+}
+
+.logo_container{
+    height: 100%;
+    display: table;
+    float: left;
+}
+.logo_container h1{
+    color: white;
+    height:100%;
+    display:table-cell;
+    vertical-align: middle;
+    font-family: 'Montserrat';
+    font-size: 32px;
+}
+.logo_container h1 span{
+        font-weight: 800; 
+}
+
+.navegador{
+    float: right;
+    height: 100%;
+
+}
+.navegador a{
+    height: 100%;
+    display: table;
+    float: left;
+    padding: 0px 20px;
+    color:white;
+}
+.navegador a:last-child{
+    padding-right: 0;
+}
+
+
+.navegador a li{
+    display: table-cell;
+    vertical-align: middle;
+    height: 100%;
+    font-family: 'Montserrat';
+}
